# data-interchange

./: CMakeLists.txt  README.md  aarch64-unknown-linux-gnu.cmake  build.zig  build.zig.zon  x86_64-apple-darwin.cmake  x86_64-unknown-linux-gnu.cmake
.github/: SECURITY.md
source/csv/: csv.zig
source/hypertext_transfer/: http_client.zig  http_message.zig  http_security_directives.zig  http_server.zig  http_status_codes.zig
source/xml/: xml.zig
src/: main.cc  main.zig
src/errors/: option_type.cc  option_type.hh  result_type.cc  result_type.hh
src/hypertext_transfer/: http_client.cc  http_client.hh  http_client.zig  http_headers.cc  http_headers.hh  http_headers.zig  http_message.cc  http_message.hh  http_message.zig  http_methods.cc  http_methods.hh  http_methods.zig  http_security_directives.cc  http_security_directives.hh  http_security_directives.zig  http_server.cc  http_server.hh  http_server.zig  http_status_codes.cc  http_status_codes.hh  http_status_codes.zig  http_versions.cc  http_versions.hh  http_versions.zig
src/json/: json.zig
src/markdown/: markdown.zig
src/tokens/: character_tokens.cc  character_tokens.hh  character_tokens.zig  comment_tokens.cc  comment_tokens.hh  comment_tokens.zig  delimiter_tokens.cc  delimiter_tokens.hh  delimiter_tokens.zig  escape_tokens.cc  escape_tokens.hh  escape_tokens.zig  keyword_tokens.cc  keyword_tokens.hh  keyword_tokens.zig  number_tokens.cc  number_tokens.hh  number_tokens.zig  operator_tokens.cc  operator_tokens.hh  operator_tokens.zig  punctuation_tokens.zig  special_tokens.zig  string_tokens.zig  token_type.cc  token_type.hh  token_type.zig  undefined_tokens.zig
src/toml/: toml.zig
toolchains/: aarch64-apple-darwin.cmake  aarch64-pc-windows-msvc.cmake  x86_64-pc-windows-msvc.cmake
